fix: increase base font size to improve readability

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 /* Increase font-size of all text */
 html {
-  font-size: 150%;
+  font-size: 160%;
 }
 
 body {
